# ResumableTrainingJob

./: Makefile  go.mod  go.sum
api/v1alpha1/: checkpointprioritypolicy_conversion.go  checkpointprioritypolicy_types.go  checkpointprioritypolicy_webhook.go  checkpointprioritypolicy_webhook_test.go  groupversion_info.go  resumabletrainingjob_conversion.go  resumabletrainingjob_types.go  resumabletrainingjob_types_test.go  resumabletrainingjob_webhook.go  resumabletrainingjob_webhook_test.go  resumereadinesspolicy_conversion.go  resumereadinesspolicy_types.go  resumereadinesspolicy_webhook.go  resumereadinesspolicy_webhook_test.go  zz_generated.deepcopy.go
api/v1beta1/: checkpointprioritypolicy_conversion.go  checkpointprioritypolicy_types.go  doc.go  groupversion_info.go  resumabletrainingjob_conversion.go  resumabletrainingjob_types.go  resumereadinesspolicy_conversion.go  resumereadinesspolicy_types.go  schema_parity_test.go  types_test.go  zz_generated.deepcopy.go
charts/rtj-operator/: .helmignore  Chart.yaml  values.yaml
cmd/fake-provisioner/: Dockerfile  main.go
cmd/operator/: main.go
config/crd/: kustomization.yaml
config/manager/: manager.yaml
config/rbac/: leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  rtj_user_roles.yaml
sdk/python/: pyproject.toml  requirements.txt
sdk/python/tests/: test_checkpoint.py  test_control.py  test_elastic.py  test_manifest.py  test_resume.py  test_storage.py
sdk/python/yield_sdk/: __init__.py  checkpoint.py  control.py  elastic.py  manifest.py  runtime.py  storage.py
(+655 files in other folders)
