[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yield-sdk"
version = "0.1.0"
description = "Phase 1 runtime helpers for manual yield, DCP checkpoints, and manifest-last S3 uploads."
requires-python = ">=3.11"
dependencies = [
  "minio>=7.2,<8",
  "torch>=2.4,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yield_sdk*"]
